[project]
name = "fastapi-replicate-medium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
